# investment-analyst-crew

./: .env.example  .env.test.example  .gitignore  AGENTS.md  README.md  ativos.txt  investment_analyst.sqlite3  pyproject.toml
apps/web/: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/alterar-senha/: page.tsx
apps/web/app/auth/callback/: route.ts
apps/web/app/cadastro/: page.tsx
apps/web/components/: app-providers.tsx  auth-form.tsx  dashboard.tsx  header.tsx  password-change-form.tsx  portfolio-table.tsx  session-provider.tsx  ui.tsx  upsell-modal.tsx
apps/web/hooks/: use-analysis.ts
apps/web/lib/: api.ts  import-parser.ts  supabase-config.ts  supabase.ts  utils.ts
apps/web/scripts/: test-security-contracts.mjs  verify-auth-supabase-import.mjs
apps/web/types/: analysis.ts
docs/templates/: importacao-carteira-pdf-texto-v1.txt  importacao-carteira-v1.csv  importacao_carteira.csv  importacao_carteira_pdf_template.md
outputs/: investment_report.md
src/investment_analyst/: api.py  crew.py  main.py
src/investment_analyst/config/: agents.yaml  llm.py  tasks.yaml
src/investment_analyst/persistence/: __init__.py  base.py  database_config.py  migrations.py  models.py
src/investment_analyst/persistence/migrations/: 0001_create_canonical_portfolio_tables.sql
src/investment_analyst/services/: __init__.py  analysis_application_service.py  analysis_preparation_service.py  import_parser.py  input_validation_service.py  job_dispatcher.py  job_manager.py  job_repository.py  portfolio_engine.py  projection_engine.py  report_export_service.py
src/investment_analyst/tools/: financial_data_tool.py  news_scraper_tool.py  pdf_generator_tool.py  teste.py
src/investment_analyst_crew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
supabase/migrations/: 20260519193826_create_initial_schema.sql
tests/: test_analysis_preparation_service.py  test_api.py  test_database_config.py  test_import_parser.py  test_job_manager.py  test_job_repository.py  test_persistence_migrations.py  test_portfolio_engine.py  test_postgres_migration_integration.py  test_projection_engine.py  test_security_residual_risks.py  test_sqlite_migration_integration.py  test_supabase_migration.py
