[project]
name = "investment-analyst-crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "crewai[google-genai]>=1.12.2",
    "crewai-tools>=1.12.2",
    "google-generativeai>=0.8.6",
    "litellm>=1.82.6",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "yfinance>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[project.scripts]
investment-analyst = "investment_analyst.main:run"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
