[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-analyst-crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "crewai[google-genai]>=1.12.2",
    "crewai-tools>=1.12.2",
    "fastapi>=0.124.0",
    "google-generativeai>=0.8.6",
    "litellm>=1.82.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.38.0",
    "yfinance>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
investment_analyst = ["config/*.yaml"]

[tool.uv]
package = true

[project.scripts]
investment-analyst = "investment_analyst.main:run"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
markers = [
    "integration: testes que dependem de servicos externos configurados localmente",
]
